--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "@react-navigation/native": "^5.7.6",
     "@react-navigation/stack": "^5.9.3",
     "@types/react-native-onboarding-swiper": "^1.1.0",
+    "@types/react-native-vector-icons": "^6.4.6",
     "react": "16.13.1",
+    "react-input-number": "^5.0.19",
     "react-native": "0.63.3",
     "react-native-gesture-handler": "^1.8.0",
     "react-native-onboarding-swiper": "^1.1.4",
+    "react-native-paper": "^4.2.0",
     "react-native-permissions": "^2.2.0",
     "react-native-reanimated": "^1.13.1",
     "react-native-safe-area-context": "^3.1.8",
