--- a/ios/Podfile
+++ b/ios/Podfile
@@ -10,6 +10,10 @@ target 'boibom' do
 
   pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
 
+  pod 'RealmJS', :path => '../node_modules/realm'
+
+  pod 'react-native-image-picker', :path => '../node_modules/react-native-image-picker'
+
   target 'boibomTests' do
     inherit! :complete
     # Pods for testing
