--- a/package.json
+++ b/package.json
@@ -20,13 +20,15 @@
     "react-input-number": "^5.0.19",
     "react-native": "0.63.3",
     "react-native-gesture-handler": "^1.8.0",
+    "react-native-image-picker": "^2.3.4",
     "react-native-onboarding-swiper": "^1.1.4",
     "react-native-paper": "^4.2.0",
     "react-native-permissions": "^2.2.0",
     "react-native-reanimated": "^1.13.1",
     "react-native-safe-area-context": "^3.1.8",
     "react-native-screens": "^2.11.0",
-    "react-native-vector-icons": "^7.1.0"
+    "react-native-vector-icons": "^7.1.0",
+    "realm": "^10.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
